# DocuHarnessX

./: .gitignore  Tutorial.md  pyproject.toml
.kiro/specs/agentic-codebase-writer/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/classification-coverage-planner/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/cobesy-writer/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/docuharnessx-mcp-refine/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/e2e-multi-project/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: brief.md  product.md  roadmap.md  structure.md  tech.md
docuharnessx/: __init__.py  _ontology.py  bundle.py  cli.py  config.py  context.py  errors.py  model_resolver.py  ontology_loader.py  ontology_setup.py  types.py
docuharnessx/analysis/: __init__.py  analyzer.py  detectors.py  enrich.py  errors.py  languages.py  model.py  scanner.py  serde.py
docuharnessx/assembler/: __init__.py  home.py  identity.py  mkdocs_config.py  model.py  pages.py  roles.py  theme.py  writer.py
docuharnessx/composition/: __init__.py  agent.py  blueprint.py  budgets.py  fallback.py  harness_factory.py  model.py  prompt.py  prose.py  structure_gate.py  task_prompt.py  wiring.py
docuharnessx/deployer/: __init__.py  commands.py  deploy.py  mode.py  model.py  tree.py  workflow.py
docuharnessx/mcp/: __init__.py  handlers.py  overview.py  planned.py  schemas.py  server.py  session.py
docuharnessx/ontology/: __init__.py  errors.py  model.py  schema.py  serializer.py  store.py  tags.py  validation.py  views.py  vocabulary.py
docuharnessx/planning/: __init__.py  classifier.py  matrix.py  model.py  planner.py  relevance.py  scorer.py  serde.py  subjects.py
docuharnessx/review/: __init__.py  aggregate.py  criteria.py  judge.py  model.py  parse.py  prompt.py  verdict.py
docuharnessx/stages/: __init__.py  analyze.py  assemble.py  base.py  classify.py  deploy.py  ingest.py  plan.py  review.py  write.py
tests/: _fakes.py  test_analysis_analyzer.py  test_analysis_core_validation.py  test_analysis_detectors.py  test_analysis_detectors_components_surface.py  test_analysis_detectors_tests_deps.py  test_analysis_enrich.py  test_analysis_errors.py  test_analysis_languages.py  test_analysis_model.py  test_analysis_reference_repo.py  test_analysis_scanner.py  test_analysis_serde.py  test_assembled_site_seam.py  test_assembler_build_determinism.py  test_assembler_home.py  test_assembler_identity.py  test_assembler_identity_remote.py  test_assembler_mermaid_strict_build.py  test_assembler_mkdocs_config.py  test_assembler_mkdocs_mermaid.py  test_assembler_model.py  test_assembler_package_surface.py  test_assembler_pages.py  test_assembler_roles.py  test_assembler_theme.py  test_assembler_writer.py  test_bundle.py  test_cli.py  test_cli_e2e.py  test_cli_init.py  test_cli_logging.py  test_cli_mcp.py  test_cli_orchestration.py  test_composition_agent.py  test_composition_blueprint.py  test_composition_budgets.py  test_composition_fallback.py  test_composition_harness_factory.py  test_composition_model.py  (+91 more)
tests/fixtures/agentic_repo/: README.md  app.py  config.py  engine.py  pyproject.toml
tests/ontology/: test_errors.py  test_hardening.py  test_model.py  test_normalize_prefix.py  test_package_import.py  test_public_api.py  test_schema.py  test_serializer.py  test_store_conformance.py  test_store_filesystem.py  test_store_inmemory.py  test_tags.py  test_validation.py  test_validation_set.py  test_views.py  test_vocabulary.py
(+36 files in other folders)
