[project]
name = "docuharnessx"
version = "1.1.0"
description = "Human-centric, role-based GitHub Pages documentation generator built on HarnessX"
requires-python = ">=3.12"
dependencies = [
    # HarnessX is not published on PyPI; pull it directly from the source repo.
    "harnessx @ git+https://github.com/Darwin-Agent/HarnessX.git",
    # YAML parser used for the optional --config file and the ontology.yaml seam.
    "pyyaml>=6.0",
    # Material for MkDocs site generator: the assembler emits a buildable
    # MkDocs source tree and the deploy stage runs `mkdocs build` (Req 8.3).
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    # MCP SDK: the `dhx mcp` stdio server is built on the low-level
    # `mcp.server` API. Available transitively via HarnessX's MCP client today,
    # but this feature makes it a direct runtime dependency, so declare it.
    "mcp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dhx = "docuharnessx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required to declare the harnessx git-URL dependency (not published on PyPI).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docuharnessx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
